--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "classie": "~1.0.1",
     "modernizr": "~2.8.3",
     "imagesloaded": "~3.1.8",
-    "gallerygrid": "~0.1.0"
+    "gallerygrid": "~0.1.0",
+    "angular": "~1.3.4"
   }
 }
