--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "gallerygrid",
+  "name": "angular-gallerygrid",
   "version": "0.1.0",
-  "homepage": "https://github.com/herosheets/gallerygrid/",
+  "homepage": "https://github.com/herosheets/angular-gallerygrid/",
   "authors": [
     "Kyle Kemp <kyle@seiyria.com>"
   ],
@@ -15,13 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "font-awesome": "~4.2.0",
-    "lodash": "~2.4.1",
-    "masonry": "~3.2.1",
-    "classie": "~1.0.1",
-    "modernizr": "~2.8.3",
-    "imagesloaded": "~3.1.8",
-    "gallerygrid": "~0.1.0",
-    "angular": "~1.3.4"
+    "gallerygrid": "~0.1.0"
   }
 }
